--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "sass-loader": "8.*",
         "vue": "^2.6.10",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "moment": "^2.24.0",
+        "vue2-datepicker": "^2.13.0",
+        "vuejs-datepicker": "^1.6.2"
     }
 }
