--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
         "axios": "^0.19",
         "bootstrap": "^4.3.1",
         "cross-env": "^6.0.3",
+        "fibers": "^4.0.2",
         "jquery": "^3.4.1",
         "laravel-mix": "^5.0.0",
         "lodash": "^4.17.15",
         "popper.js": "^1.16.0",
         "resolve-url-loader": "3.1.0",
-        "sass": "^1.23.3",
+        "sass": "^1.23.7",
         "sass-loader": "8.*",
         "vue": "^2.6.10",
         "vue-template-compiler": "^2.6.10"
@@ -26,6 +27,7 @@
     "dependencies": {
         "moment": "^2.24.0",
         "vue2-datepicker": "^3.0.2",
+        "vue2-editor": "^2.10.2",
         "vuejs-datepicker": "^1.6.2"
     }
 }
