--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/socialite": "^4.2",
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.0"
+        "laravel/ui": "^1.0",
+        "phpoffice/phpword": "^0.17.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
