--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.0",
-        "phpoffice/phpword": "dev-master"
+        "phpoffice/phpword": "^0.17.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
