--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@tinymce/tinymce-vue": "^3.0.1",
         "moment": "^2.24.0",
         "tiptap": "^1.26.6",
         "tiptap-extensions": "^1.28.6",
