--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "cross-env": "^6.0.3",
         "fibers": "^4.0.2",
         "jquery": "^3.4.1",
-        "laravel-mix": "^5.0.0",
+        "laravel-mix": "^5.0.1",
         "lodash": "^4.17.15",
-        "popper.js": "^1.16.0",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "3.1.0",
-        "sass": "^1.23.7",
-        "sass-loader": "8.*",
+        "sass": "^1.25.0",
+        "sass-loader": "^8.0.2",
         "vue": "^2.6.11",
         "vue-template-compiler": "^2.6.11"
     },
@@ -29,7 +29,7 @@
         "moment": "^2.24.0",
         "tiptap": "^1.26.6",
         "tiptap-extensions": "^1.28.6",
-        "vue2-datepicker": "^3.0.2",
+        "vue2-datepicker": "^3.3.0",
         "vue2-editor": "^2.10.2",
         "vuejs-datepicker": "^1.6.2"
     }
