--- a/composer.json
+++ b/composer.json
@@ -8,26 +8,27 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.3",
         "adrianbarbos/mobilpay": "^1.0",
-        "barryvdh/laravel-dompdf": "^0.8.5",
+        "barryvdh/laravel-cors": "^2",
+        "barryvdh/laravel-dompdf": "^0.8.6",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/socialite": "^4.2",
-        "laravel/telescope": "^2.1",
-        "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.0",
+        "laravel/framework": "^7",
+        "laravel/socialite": "^4",
+        "laravel/telescope": "^3",
+        "laravel/tinker": "^2",
+        "laravel/ui": "^2",
         "nao-pon/flysystem-google-drive": "~1.1",
         "phpoffice/phpword": "^0.17.0",
         "spatie/laravel-backup": "^6.7"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "barryvdh/laravel-debugbar": "*",
+        "facade/ignition": "*",
+        "fzaninotto/faker": "*",
+        "mockery/mockery": "*",
+        "nunomaduro/collision": "*",
+        "phpunit/phpunit": "*"
     },
     "config": {
         "optimize-autoloader": true,
