--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/ui": "^2",
         "nao-pon/flysystem-google-drive": "~1.1",
         "phpoffice/phpword": "^0.17.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-backup": "^6.7"
     },
     "require-dev": {
