--- a/composer.json
+++ b/composer.json
@@ -8,29 +8,29 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
-        "adrianbarbos/mobilpay": "^1.0",
-        "barryvdh/laravel-cors": "^2",
-        "barryvdh/laravel-dompdf": "^0.8.6",
-        "fideloper/proxy": "^4.0",
+        "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "fideloper/proxy": "^4.4",
+        "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.5",
-        "laravel/framework": "^7",
-        "laravel/socialite": "^4",
-        "laravel/telescope": "^3",
-        "laravel/tinker": "^2",
-        "laravel/ui": "^2",
-        "nao-pon/flysystem-google-drive": "~1.1",
-        "phpoffice/phpword": "^0.17.0",
+        "laravel/framework": "^9",
+        "laravel/sanctum": "^2.8",
+        "laravel/telescope": "^4.9",
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4",
+        "phpoffice/phpword": "^1.0.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "spatie/laravel-backup": "^6.7"
+        "tinymce/tinymce": "^6.3"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "*",
-        "facade/ignition": "*",
-        "fzaninotto/faker": "*",
-        "mockery/mockery": "*",
-        "nunomaduro/collision": "*",
-        "phpunit/phpunit": "*"
+        "barryvdh/laravel-debugbar": "^3.7",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/pint": "^1.0",
+        "laravel/sail": "^1.0.1",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
