--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^0.19.2",
+        "@popperjs/core": "^2.11.5",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "axios": "^0.27.2",
         "bootstrap": "^4.4.1",
         "cross-env": "^6.0.3",
-        "jquery": "^3.5.1",
-        "laravel-mix": "^5.0.5",
+        "laravel-vite-plugin": "^0.7.3",
         "lodash": "^4.17.20",
+        "postcss": "^8.4.14",
+        "postcss-import": "^14.0.1",
         "popper.js": "^1.16.1",
-        "resolve-url-loader": "3.1.0",
-        "sass": "^1.25.0",
-        "sass-loader": "^8.0.2",
-        "vue": "^2.6.11",
-        "vue-template-compiler": "^2.6.11"
+        "resolve-url-loader": "5.0.0",
+        "sass": "^1.54.0",
+        "sass-loader": "^13.0.2",
+        "vite": "^4.0",
+        "vue": "^3.2.45"
     },
     "dependencies": {
-        "@tinymce/tinymce-vue": "^3.1.0",
+        "@tinymce/tinymce-vue": "^6.3.1",
         "moment": "^2.24.0",
-        "tiptap": "^1.26.6",
-        "tiptap-extensions": "^1.28.6",
-        "vue2-datepicker": "^3.3.1",
-        "vue2-editor": "^2.10.2",
-        "vuejs-datepicker": "^1.6.2"
+        "vue-datepicker-next": "^1.0.2"
     }
 }
